// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Embed Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-1ago99h"
  >
    <iframe
      allowfullscreen=""
      sandbox=""
      src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fchangeclean%2Fvideos%2F3136062856696319%2F&show_text=false&width=560&t=0"
      title="Title"
    />
  </div>
</DocumentFragment>
`;

exports[`Embed Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-1ago99h"
  >
    <iframe
      allowfullscreen=""
      sandbox=""
      src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fchangeclean%2Fvideos%2F3136062856696319%2F&show_text=false&width=560&t=0"
      title="Title"
    />
  </div>
</DocumentFragment>
`;
